# cham_HE

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  toy_workflow_demo.py
Projects/: .gitkeep
chameleon/: __init__.py  run_humaneval.ps1  workflow.py
chameleon/analysis/: __init__.py  analysis.py  executive_report.py  mcnemar.py  metrics.py  reports.py  visualizations.py
chameleon/cli/: __init__.py  browser_helpers.py  commands.py  data_upload.py  file_utils.py  model_lookup.py  validators.py
chameleon/core/: __init__.py  config.py  project.py  schemas.py  validators.py
chameleon/distortion/: __init__.py  constants.py  engine.py  runner.py  validator.py
chameleon/evaluation/: __init__.py  batch_processor.py
chameleon/models/: __init__.py  anthropic_backend.py  base.py  cuda_backend.py  dummy_backend.py  mlx_backend.py  openai_backend.py  registry.py
tests/: __init__.py  test_analysis.py  test_core.py
