[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chameleon-eval"
version = "2.0.0"
description = "LLM Robustness Testing Framework - Evaluate model performance under distortion conditions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Steve Solun", email = "steve@solun.dev"}
]
keywords = [
    "llm",
    "evaluation",
    "robustness",
    "distortion",
    "benchmark",
    "gpt",
    "claude",
    "machine-learning",
    "nlp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
# Core analysis with visualizations
analysis = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
]

# OpenAI backend
openai = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
]

# Mistral backend (for distortion)
mistral = [
    "mistralai>=1.0.0",
]

# Anthropic backend
anthropic = [
    "anthropic>=0.18.0",
]

# MLX backend (Apple Silicon)
mlx = [
    "mlx>=0.0.5",
    "mlx-lm>=0.0.6",
]

# CUDA/PyTorch backend
cuda = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
]

# Local distortion server
distortion = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentencepiece>=0.1.99",
]

# All features
all = [
    "chameleon-eval[analysis,openai,mistral,anthropic]",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
chameleon = "chameleon.cli.commands:main"

[project.urls]
Homepage = "https://github.com/stevesolun/Chameleon"
Documentation = "https://github.com/stevesolun/Chameleon#readme"
Repository = "https://github.com/stevesolun/Chameleon.git"
Issues = "https://github.com/stevesolun/Chameleon/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chameleon*"]

[tool.setuptools.package-data]
chameleon = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | archive
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "archive",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["archive", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]


